# gemini-watermark-remover

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  test_watermark_detection.py
js/: app.js  engine.js  videoEngine.js
scripts/: remove-watermark.sh
src/gemini_watermark_remover/: __init__.py  cli.py
src/gemini_watermark_remover/assets/: __init__.py
src/gemini_watermark_remover/core/: __init__.py  alpha_map.py  blend.py  position.py  temporal.py
src/gemini_watermark_remover/processors/: __init__.py  image.py  video.py
